JumpScript/tests/baselines/reference/parser.asyncGenerators.classMethods.esnext.errors.txt
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorGetAccessorIsError.jump(2,17): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorPropertyIsError.jump(2,15): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorSetAccessorIsError.jump(2,17): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitInParameterInitializerIsError.jump(2,19): error TS2524: 'await' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitMissingValueIsError.jump(3,14): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(2,15): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(2,15): error TS2693: 'await' only refers to a type, but is being used as a value here.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(2,20): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump(4,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(3,18): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(3,24): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump(3,26): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump(3,18): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump(3,26): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(3,28): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(3,34): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump(3,36): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump(3,28): error TS1005: '(' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump(3,36): error TS1005: '=>' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldAsTypeIsStrictError.jump(4,16): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInClassComputedPropertyIsError.jump(2,14): error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInClassComputedPropertyIsError.jump(2,14): error TS2693: 'yield' only refers to a type, but is being used as a value here.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInParameterInitializerIsError.jump(2,19): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInParameterInitializerIsError.jump(2,19): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(2,15): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(2,15): error TS2693: 'yield' only refers to a type, but is being used as a value here.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(2,20): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump(4,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarMissingValueIsError.jump(3,16): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/methodIsOk.jump (0 errors) ====
    class C1 {
        async * f() {
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitMethodNameIsOk.jump (0 errors) ====
    class C2 {
        async * await() {
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldMethodNameIsOk.jump (0 errors) ====
    class C3 {
        async * yield() {
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitParameterIsError.jump (4 errors) ====
    class C4 {
        async * f(await) {
                  ~~~~~
!!! error TS1138: Parameter declaration expected.
                  ~~~~~
!!! error TS2693: 'await' only refers to a type, but is being used as a value here.
                       ~
!!! error TS1005: ';' expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldParameterIsError.jump (4 errors) ====
    class C5 {
        async * f(yield) {
                  ~~~~~
!!! error TS1138: Parameter declaration expected.
                  ~~~~~
!!! error TS2693: 'yield' only refers to a type, but is being used as a value here.
                       ~
!!! error TS1005: ';' expected.
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitInParameterInitializerIsError.jump (1 errors) ====
    class C6 {
        async * f(a = await 1) {
                      ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInParameterInitializerIsError.jump (2 errors) ====
    class C7 {
        async * f(a = yield) {
                      ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                      ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedAsyncGeneratorIsOk.jump (0 errors) ====
    class C8 {
        async * f() {
            async function * g() {
            }
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedYieldIsError.jump (2 errors) ====
    class C9 {
        async * f() {
            function yield() {
                     ~~~~~
!!! error TS1003: Identifier expected.
                             ~
!!! error TS1005: '=>' expected.
            }
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedYieldIsError.jump (2 errors) ====
    class C10 {
        async * f() {
            const x = function yield() {
                               ~~~~~
!!! error TS1005: '(' expected.
                                       ~
!!! error TS1005: '=>' expected.
            };
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionDeclarationNamedAwaitIsError.jump (3 errors) ====
    class C11 {
        async * f() {
            function await() {
                     ~~~~~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1109: Expression expected.
                             ~
!!! error TS1005: ';' expected.
            }
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/nestedFunctionExpressionNamedAwaitIsError.jump (3 errors) ====
    class C12 {
        async * f() {
            const x = function await() {
                               ~~~~~
!!! error TS1005: '(' expected.
                                     ~
!!! error TS1109: Expression expected.
                                       ~
!!! error TS1005: ';' expected.
            };
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldIsOk.jump (0 errors) ====
    class C13 {
        async * f() {
            yield;
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldWithValueIsOk.jump (0 errors) ====
    class C14 {
        async * f() {
            yield 1;
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarMissingValueIsError.jump (1 errors) ====
    class C15 {
        async * f() {
            yield *;
                   ~
!!! error TS1109: Expression expected.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldStarWithValueIsOk.jump (0 errors) ====
    class C16 {
        async * f() {
            yield * [];
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitWithValueIsOk.jump (0 errors) ====
    class C17 {
        async * f() {
            await 1;
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitMissingValueIsError.jump (1 errors) ====
    class C18 {
        async * f() {
            await;
                 ~
!!! error TS1109: Expression expected.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/awaitAsTypeIsOk.jump (0 errors) ====
    interface await {}
    class C19 {
        async * f() {
            let x: await;
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldAsTypeIsStrictError.jump (1 errors) ====
    interface yield {}
    class C20 {
        async * f() {
            let x: yield;
                   ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInClassComputedPropertyIsError.jump (2 errors) ====
    class C21 {
        async * [yield]() {
                 ~~~~~
!!! error TS1213: Identifier expected. 'yield' is a reserved word in strict mode. Class definitions are automatically in strict mode.
                 ~~~~~
!!! error TS2693: 'yield' only refers to a type, but is being used as a value here.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/yieldInNestedComputedPropertyIsOk.jump (0 errors) ====
    class C22 {
        async * f() {
            const x = { [yield]: 1 };
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorGetAccessorIsError.jump (1 errors) ====
    class C23 {
        async * get x() {
                    ~
!!! error TS1005: '(' expected.
            return 1;
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorSetAccessorIsError.jump (1 errors) ====
    class C24 {
        async * set x(value: number) {
                    ~
!!! error TS1005: '(' expected.
        }
    }
==== tests/cases/conformance/parser/ecmascriptnext/asyncGenerators/asyncGeneratorPropertyIsError.jump (1 errors) ====
    class C25 {
        async * x = 1;
                  ~
!!! error TS1005: '(' expected.
    }